fix modal overflow issue
was preventing box shadow to be displayed

--- a/src/components/Templates/SimpleModal/SimpleModal.scss
+++ b/src/components/Templates/SimpleModal/SimpleModal.scss
@@ -59,7 +59,6 @@
 
 .simple-modal__main {
   flex: 1;
-  overflow-y: auto;
 }
 
 .simple-modal__footer {
